--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <div class="attribution">
       <footer>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Raymond Chia</a>.</footer>
+      Coded by <a href="https://www.linkedin.com/in/chiarts/">Raymond Chia</a>.</footer>
     </div>
   </body>
 </html>
